--- a/TootyTootyPointAndShooty/SimulaMovimientoServer_Bit/SimulaMovimientoServer_Bit.vcxproj
+++ b/TootyTootyPointAndShooty/SimulaMovimientoServer_Bit/SimulaMovimientoServer_Bit.vcxproj
@@ -72,14 +72,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(SolutionDir)\deps\include;$(Solutiondir)\SimulaMovimientoLib_Bit;$(Solutiondir)\SocketLib;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>$(SolutionDir)\deps\include;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)\deps\lib\;$(LibraryPath);$(SolutionDir)\Debug;</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>$(SolutionDir)\deps\include;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)\deps\lib\;$(LibraryPath);$(SolutionDir)\Debug;</LibraryPath>
     <IncludePath>$(SolutionDir)\deps\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
