--- a/TootyTootyPointAndShooty/SimulaMovimientoClient_Bit/SimulaMovimientoClient_Bit.vcxproj
+++ b/TootyTootyPointAndShooty/SimulaMovimientoClient_Bit/SimulaMovimientoClient_Bit.vcxproj
@@ -176,6 +176,9 @@
     <ClInclude Include="SDLInterface.h" />
     <ClInclude Include="Sprite.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
