--- a/TootyTootyPointAndShooty/SimulaMovimientoServer_Bit/SimulaMovimientoServer_Bit.vcxproj
+++ b/TootyTootyPointAndShooty/SimulaMovimientoServer_Bit/SimulaMovimientoServer_Bit.vcxproj
@@ -164,6 +164,9 @@
     <ClInclude Include="PlayerCommand.h" />
     <ClInclude Include="PlayerCommandList.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
